[package]

name = "servotk"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "servotk"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["webdriver", "max_log_level"]
max_log_level = ["log/release_max_level_info"]
webdriver = ["webdriver_server"]
energy-profiling = ["profile_traits/energy-profiling"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[dev-dependencies]
compiletest_helper = {path = "../../tests/compiletest/helper"}
gfx_tests = {path = "../../tests/unit/gfx"}
layout_tests = {path = "../../tests/unit/layout"}
net_tests = {path = "../../tests/unit/net"}
net_traits_tests = {path = "../../tests/unit/net_traits"}
plugin_compiletest = {path = "../../tests/compiletest/plugin"}
profile_tests = {path = "../../tests/unit/profile"}
script_tests = {path = "../../tests/unit/servotk_script"}
style_tests = {path = "../../tests/unit/style"}
util_tests = {path = "../../tests/unit/util"}

[dependencies]
canvas = {path = "../../components/canvas"}
canvas_traits = {path = "../../components/canvas_traits"}
compositing = {path = "../../components/compositing"}
constellation = {path = "../../components/constellation"}
devtools = {path = "../../components/devtools"}
devtools_traits = {path = "../../components/devtools_traits"}
env_logger = "0.3"
euclid = "0.9"
gfx = {path = "../../components/gfx"}
gleam = "0.2"
glutin_app = {path = "../../ports/glutin"}
ipc-channel = "0.5"
layout = {path = "../../components/layout"}
layout_thread = {path = "../../components/layout_thread"}
libc = "0.2"
log = "0.3"
msg = {path = "../../components/msg"}
net = {path = "../../components/net"}
net_traits = {path = "../../components/net_traits"}
profile = {path = "../../components/profile"}
profile_traits = {path = "../../components/profile_traits"}
script_layout_interface = {path = "../../components/script_layout_interface"}
script_traits = {path = "../../components/script_traits"}
style = {path = "../../components/style", features = ["servo"]}
url = "1.2"
util = {path = "../../components/util"}
webdriver_server = {path = "../../components/webdriver_server", optional = true}

[dependencies.webrender]
git = "https://github.com/servo/webrender"
default-features = false
features = ["serde_macros"]

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"
default_features = false
features = ["serde_macros"]

[dependencies.script_pluggable]
path = "../../components/script_pluggable"
default-features = false
features = ["servotk"]

[target.'cfg(not(target_os = "android"))'.dependencies]
sig = "0.1"
backtrace = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.3"
android_glue = "0.1.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
gaol = {git = "https://github.com/servo/gaol"}
